<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recipeapi.RecipeSearchActivity">

    <EditText
        android:id="@+id/editRecipeSearchText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/recipe_search_hint"
        app:layout_constraintEnd_toStartOf="@+id/buttonSearchRecipe"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/validateRecipeSearchText"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonSearchRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_search_button"
        app:layout_constraintBottom_toBottomOf="@+id/editRecipeSearchText"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/viewSavedRecipeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_favorite_recipes_button"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="158dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecipeRecycler"
        android:layout_width="409dp"
        android:layout_height="616dp"
        app:layout_constraintTop_toBottomOf="@+id/editRecipeSearchText"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/validateRecipeSearchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterRecipeSearchText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>