...
    <string name="validationPassed">Validation passed</string>
    <string name="validation">Validation</string>


    <!--recipe search-->
    <string name="Lookup" translatable="false">Lookup</string>
    <string name="recipe_validate_error_msg">Your enter text is not validate</string>
    <string name="recipe_validate_correct_msg">Your enter text is validate</string>
    <string name="recipe_save_alert">Do you want to save as favorite?</string>
    <string name="recipe_no">NO</string>
    <string name="recipe_yes">YES</string>
    <string name="recipe_add_alert">You add it to your Favorites.</string>
    <string name="recipe_search_hint">Enter Here</string>
...
